parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program_structure
Rule 1     program_structure -> PROGRAM initiate ID addfun addprog SEMI declare_var changescope functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
Rule 2     program_structure -> PROGRAM initiate ID addfun addprog SEMI declare_var changescope MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
Rule 3     program_structure -> PROGRAM initiate ID addfun addprog SEMI changescope functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
Rule 4     program_structure -> PROGRAM initiate ID addfun addprog SEMI MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
Rule 5     addprog -> <empty>
Rule 6     initiate -> <empty>
Rule 7     addfun -> <empty>
Rule 8     changescope -> <empty>
Rule 9     changeback -> <empty>
Rule 10    type -> INT
Rule 11    type -> FLOAT
Rule 12    type -> CHAR
Rule 13    declare_var -> VARS multitypes
Rule 14    multitypes -> type addtype COLON multivars SEMI
Rule 15    multitypes -> type addtype COLON multivars SEMI multitypes
Rule 16    addtype -> <empty>
Rule 17    multivars -> ID addvar
Rule 18    multivars -> ID addvar COMMA multivars
Rule 19    multivars -> dimvars addvard
Rule 20    multivars -> dimvars addvard COMMA multivars
Rule 21    dimvars -> ID LBRACK expr RBRACK
Rule 22    addvar -> <empty>
Rule 23    addvard -> <empty>
Rule 24    return_type -> INT
Rule 25    return_type -> FLOAT
Rule 26    return_type -> CHAR
Rule 27    return_type -> VOID
Rule 28    declare_fun -> FUNCTION return_type addtype ID addfun LPAREN RPAREN
Rule 29    declare_fun -> FUNCTION return_type addtype ID addfun LPAREN paramstatus params paramstatus RPAREN
Rule 30    functions -> declare_fun declare_var LCURLY statutes RCURLY endfunc
Rule 31    functions -> declare_fun LCURLY statutes RCURLY endfunc
Rule 32    functions -> declare_fun declare_var LCURLY statutes RCURLY endfunc functions
Rule 33    functions -> declare_fun LCURLY statutes RCURLY endfunc functions
Rule 34    endfunc -> <empty>
Rule 35    paramstatus -> <empty>
Rule 36    params -> type addtype COLON multivars
Rule 37    params -> type addtype COLON multivars SEMI params
Rule 38    statutes -> assign
Rule 39    statutes -> assign statutes
Rule 40    statutes -> call_void
Rule 41    statutes -> call_void statutes
Rule 42    statutes -> returning
Rule 43    statutes -> reading
Rule 44    statutes -> reading statutes
Rule 45    statutes -> writing
Rule 46    statutes -> writing statutes
Rule 47    statutes -> decision
Rule 48    statutes -> decision statutes
Rule 49    statutes -> conditional
Rule 50    statutes -> conditional statutes
Rule 51    statutes -> nonconditional
Rule 52    statutes -> nonconditional statutes
Rule 53    assign -> ID pushid EQUALS exprs assignment SEMI
Rule 54    assign -> ID pushid LBRACK exprs RBRACK verif EQUALS exprs assignment SEMI
Rule 55    assignment -> <empty>
Rule 56    call_void -> ID call exprp confirm SEMI
Rule 57    call_void -> ID call LPAREN RPAREN confirm SEMI
Rule 58    call_void -> special2 exprp sconfirm2 SEMI
Rule 59    special2 -> REGRESION
Rule 60    special2 -> PLOT
Rule 61    sconfirm2 -> <empty>
Rule 62    returning -> RETURN LPAREN exprs returnquad RPAREN SEMI
Rule 63    returnquad -> <empty>
Rule 64    reading -> READ LPAREN read_opt RPAREN SEMI
Rule 65    read_opt -> expr readquad
Rule 66    read_opt -> expr readquad COMMA read_opt
Rule 67    readquad -> <empty>
Rule 68    writing -> WRITE LPAREN write_opt RPAREN SEMI
Rule 69    write_opt -> MESSAGE writequad1
Rule 70    write_opt -> MESSAGE writequad1 COMMA write_opt
Rule 71    write_opt -> exprs writequad2
Rule 72    write_opt -> exprs writequad2 COMMA write_opt
Rule 73    writequad1 -> <empty>
Rule 74    writequad2 -> <empty>
Rule 75    decision -> IF LPAREN logic RPAREN ifquad THEN LCURLY statutes RCURLY filljump
Rule 76    decision -> IF LPAREN logic RPAREN ifquad THEN LCURLY statutes RCURLY ELSE elsequad LCURLY statutes RCURLY filljump
Rule 77    ifquad -> <empty>
Rule 78    elsequad -> <empty>
Rule 79    filljump -> <empty>
Rule 80    conditional -> WHILE loopquad LPAREN logic RPAREN whilequad DO LCURLY statutes RCURLY endquad
Rule 81    loopquad -> <empty>
Rule 82    whilequad -> <empty>
Rule 83    endquad -> <empty>
Rule 84    logic -> relation AND relation logicquad
Rule 85    logic -> relation OR relation logicquad
Rule 86    logic -> relation
Rule 87    relation -> exprs GREATER exprs logicquad
Rule 88    relation -> exprs GREATER_EQ exprs logicquad
Rule 89    relation -> exprs LESSER exprs logicquad
Rule 90    relation -> exprs LESSER_EQ exprs logicquad
Rule 91    relation -> exprs COMPARE exprs logicquad
Rule 92    relation -> exprs DIFFERENT exprs logicquad
Rule 93    logicquad -> <empty>
Rule 94    nonconditional -> FOR exprs forquad1 EQUALS exprs forquad2 TO exprs forquad3 DO LCURLY statutes RCURLY forquad4
Rule 95    forquad1 -> <empty>
Rule 96    forquad2 -> <empty>
Rule 97    forquad3 -> <empty>
Rule 98    forquad4 -> <empty>
Rule 99    exprs -> expr pams
Rule 100   exprs -> expr pams COMMA exprs
Rule 101   exprs -> exprp pams
Rule 102   exprs -> exprp pams COMMA exprs
Rule 103   exprp -> LPAREN pushop exprs RPAREN popop
Rule 104   popop -> <empty>
Rule 105   expr -> expr PLUS pushop term quad1
Rule 106   expr -> expr MINUS pushop term quad1
Rule 107   expr -> term quad1
Rule 108   term -> term TIMES pushop factor quad2
Rule 109   term -> term DIVIDE pushop factor quad2
Rule 110   term -> factor quad2
Rule 111   quad1 -> <empty>
Rule 112   quad2 -> <empty>
Rule 113   pushop -> <empty>
Rule 114   factor -> C_INT pushint
Rule 115   factor -> MINUS C_INT pushintn
Rule 116   factor -> C_FLOAT pushfloat
Rule 117   factor -> MINUS C_FLOAT pushfloatn
Rule 118   factor -> C_CHAR pushchar
Rule 119   factor -> ID pushid
Rule 120   factor -> ID pushid LBRACK exprs RBRACK verif
Rule 121   factor -> ID call LPAREN RPAREN confirm
Rule 122   factor -> ID call exprp confirm
Rule 123   factor -> special1 exprp sconfirm1
Rule 124   special1 -> MEDIA
Rule 125   special1 -> MODA
Rule 126   special1 -> VARIANZA
Rule 127   sconfirm1 -> <empty>
Rule 128   pushid -> <empty>
Rule 129   pushint -> <empty>
Rule 130   pushintn -> <empty>
Rule 131   pushfloat -> <empty>
Rule 132   pushfloatn -> <empty>
Rule 133   pushchar -> <empty>
Rule 134   verif -> <empty>
Rule 135   call -> <empty>
Rule 136   pams -> <empty>
Rule 137   confirm -> <empty>

Terminals, with rules where they appear

AND                  : 84
CHAR                 : 12 26
COLON                : 14 15 36 37
COMMA                : 18 20 66 70 72 100 102
COMPARE              : 91
C_CHAR               : 118
C_FLOAT              : 116 117
C_INT                : 114 115
DIFFERENT            : 92
DIVIDE               : 109
DO                   : 80 94
ELSE                 : 76
EQUALS               : 53 54 94
FLOAT                : 11 25
FOR                  : 94
FUNCTION             : 28 29
GREATER              : 87
GREATER_EQ           : 88
ID                   : 1 2 3 4 17 18 21 28 29 53 54 56 57 119 120 121 122
IF                   : 75 76
INT                  : 10 24
LBRACK               : 21 54 120
LCURLY               : 1 2 3 4 30 31 32 33 75 76 76 80 94
LESSER               : 89
LESSER_EQ            : 90
LPAREN               : 1 2 3 4 28 29 57 62 64 68 75 76 80 103 121
MAIN                 : 1 2 3 4
MEDIA                : 124
MESSAGE              : 69 70
MINUS                : 106 115 117
MODA                 : 125
OR                   : 85
PLOT                 : 60
PLUS                 : 105
PROGRAM              : 1 2 3 4
RBRACK               : 21 54 120
RCURLY               : 1 2 3 4 30 31 32 33 75 76 76 80 94
READ                 : 64
REGRESION            : 59
RETURN               : 62
RPAREN               : 1 2 3 4 28 29 57 62 64 68 75 76 80 103 121
SEMI                 : 1 2 3 4 14 15 37 53 54 56 57 58 62 64 68
THEN                 : 75 76
TIMES                : 108
TO                   : 94
VARIANZA             : 126
VARS                 : 13
VOID                 : 27
WHILE                : 80
WRITE                : 68
error                : 

Nonterminals, with rules where they appear

addfun               : 1 2 3 4 28 29
addprog              : 1 2 3 4
addtype              : 14 15 28 29 36 37
addvar               : 17 18
addvard              : 19 20
assign               : 38 39
assignment           : 53 54
call                 : 56 57 121 122
call_void            : 40 41
changeback           : 1 2 3 4
changescope          : 1 2 3
conditional          : 49 50
confirm              : 56 57 121 122
decision             : 47 48
declare_fun          : 30 31 32 33
declare_var          : 1 2 30 32
dimvars              : 19 20
elsequad             : 76
endfunc              : 1 2 3 4 30 31 32 33
endquad              : 80
expr                 : 21 65 66 99 100 105 106
exprp                : 56 58 101 102 122 123
exprs                : 53 54 54 62 71 72 87 87 88 88 89 89 90 90 91 91 92 92 94 94 94 100 102 103 120
factor               : 108 109 110
filljump             : 75 76
forquad1             : 94
forquad2             : 94
forquad3             : 94
forquad4             : 94
functions            : 1 3 32 33
ifquad               : 75 76
initiate             : 1 2 3 4
logic                : 75 76 80
logicquad            : 84 85 87 88 89 90 91 92
loopquad             : 80
multitypes           : 13 15
multivars            : 14 15 18 20 36 37
nonconditional       : 51 52
pams                 : 99 100 101 102
params               : 29 37
paramstatus          : 29 29
popop                : 103
program_structure    : 0
pushchar             : 118
pushfloat            : 116
pushfloatn           : 117
pushid               : 53 54 119 120
pushint              : 114
pushintn             : 115
pushop               : 103 105 106 108 109
quad1                : 105 106 107
quad2                : 108 109 110
read_opt             : 64 66
reading              : 43 44
readquad             : 65 66
relation             : 84 84 85 85 86
return_type          : 28 29
returning            : 42
returnquad           : 62
sconfirm1            : 123
sconfirm2            : 58
special1             : 123
special2             : 58
statutes             : 1 2 3 4 30 31 32 33 39 41 44 46 48 50 52 75 76 76 80 94
term                 : 105 106 107 108 109
type                 : 14 15 36 37
verif                : 54 120
whilequad            : 80
write_opt            : 68 70 72
writequad1           : 69 70
writequad2           : 71 72
writing              : 45 46

Parsing method: LALR

state 0

    (0) S' -> . program_structure
    (1) program_structure -> . PROGRAM initiate ID addfun addprog SEMI declare_var changescope functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (2) program_structure -> . PROGRAM initiate ID addfun addprog SEMI declare_var changescope MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (3) program_structure -> . PROGRAM initiate ID addfun addprog SEMI changescope functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (4) program_structure -> . PROGRAM initiate ID addfun addprog SEMI MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc

    PROGRAM         shift and go to state 2

    program_structure              shift and go to state 1

state 1

    (0) S' -> program_structure .



state 2

    (1) program_structure -> PROGRAM . initiate ID addfun addprog SEMI declare_var changescope functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (2) program_structure -> PROGRAM . initiate ID addfun addprog SEMI declare_var changescope MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (3) program_structure -> PROGRAM . initiate ID addfun addprog SEMI changescope functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (4) program_structure -> PROGRAM . initiate ID addfun addprog SEMI MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (6) initiate -> .

    ID              reduce using rule 6 (initiate -> .)

    initiate                       shift and go to state 3

state 3

    (1) program_structure -> PROGRAM initiate . ID addfun addprog SEMI declare_var changescope functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (2) program_structure -> PROGRAM initiate . ID addfun addprog SEMI declare_var changescope MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (3) program_structure -> PROGRAM initiate . ID addfun addprog SEMI changescope functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (4) program_structure -> PROGRAM initiate . ID addfun addprog SEMI MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc

    ID              shift and go to state 4


state 4

    (1) program_structure -> PROGRAM initiate ID . addfun addprog SEMI declare_var changescope functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (2) program_structure -> PROGRAM initiate ID . addfun addprog SEMI declare_var changescope MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (3) program_structure -> PROGRAM initiate ID . addfun addprog SEMI changescope functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (4) program_structure -> PROGRAM initiate ID . addfun addprog SEMI MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (7) addfun -> .

    SEMI            reduce using rule 7 (addfun -> .)

    addfun                         shift and go to state 5

state 5

    (1) program_structure -> PROGRAM initiate ID addfun . addprog SEMI declare_var changescope functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (2) program_structure -> PROGRAM initiate ID addfun . addprog SEMI declare_var changescope MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (3) program_structure -> PROGRAM initiate ID addfun . addprog SEMI changescope functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (4) program_structure -> PROGRAM initiate ID addfun . addprog SEMI MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (5) addprog -> .

    SEMI            reduce using rule 5 (addprog -> .)

    addprog                        shift and go to state 6

state 6

    (1) program_structure -> PROGRAM initiate ID addfun addprog . SEMI declare_var changescope functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (2) program_structure -> PROGRAM initiate ID addfun addprog . SEMI declare_var changescope MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (3) program_structure -> PROGRAM initiate ID addfun addprog . SEMI changescope functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (4) program_structure -> PROGRAM initiate ID addfun addprog . SEMI MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc

    SEMI            shift and go to state 7


state 7

    (1) program_structure -> PROGRAM initiate ID addfun addprog SEMI . declare_var changescope functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (2) program_structure -> PROGRAM initiate ID addfun addprog SEMI . declare_var changescope MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (3) program_structure -> PROGRAM initiate ID addfun addprog SEMI . changescope functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (4) program_structure -> PROGRAM initiate ID addfun addprog SEMI . MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (13) declare_var -> . VARS multitypes
    (8) changescope -> .

    MAIN            shift and go to state 10
    VARS            shift and go to state 11
    FUNCTION        reduce using rule 8 (changescope -> .)

    declare_var                    shift and go to state 8
    changescope                    shift and go to state 9

state 8

    (1) program_structure -> PROGRAM initiate ID addfun addprog SEMI declare_var . changescope functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (2) program_structure -> PROGRAM initiate ID addfun addprog SEMI declare_var . changescope MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (8) changescope -> .

    MAIN            reduce using rule 8 (changescope -> .)
    FUNCTION        reduce using rule 8 (changescope -> .)

    changescope                    shift and go to state 12

state 9

    (3) program_structure -> PROGRAM initiate ID addfun addprog SEMI changescope . functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (30) functions -> . declare_fun declare_var LCURLY statutes RCURLY endfunc
    (31) functions -> . declare_fun LCURLY statutes RCURLY endfunc
    (32) functions -> . declare_fun declare_var LCURLY statutes RCURLY endfunc functions
    (33) functions -> . declare_fun LCURLY statutes RCURLY endfunc functions
    (28) declare_fun -> . FUNCTION return_type addtype ID addfun LPAREN RPAREN
    (29) declare_fun -> . FUNCTION return_type addtype ID addfun LPAREN paramstatus params paramstatus RPAREN

    FUNCTION        shift and go to state 15

    functions                      shift and go to state 13
    declare_fun                    shift and go to state 14

state 10

    (4) program_structure -> PROGRAM initiate ID addfun addprog SEMI MAIN . changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (9) changeback -> .

    LPAREN          reduce using rule 9 (changeback -> .)

    changeback                     shift and go to state 16

state 11

    (13) declare_var -> VARS . multitypes
    (14) multitypes -> . type addtype COLON multivars SEMI
    (15) multitypes -> . type addtype COLON multivars SEMI multitypes
    (10) type -> . INT
    (11) type -> . FLOAT
    (12) type -> . CHAR

    INT             shift and go to state 19
    FLOAT           shift and go to state 20
    CHAR            shift and go to state 21

    multitypes                     shift and go to state 17
    type                           shift and go to state 18

state 12

    (1) program_structure -> PROGRAM initiate ID addfun addprog SEMI declare_var changescope . functions MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (2) program_structure -> PROGRAM initiate ID addfun addprog SEMI declare_var changescope . MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (30) functions -> . declare_fun declare_var LCURLY statutes RCURLY endfunc
    (31) functions -> . declare_fun LCURLY statutes RCURLY endfunc
    (32) functions -> . declare_fun declare_var LCURLY statutes RCURLY endfunc functions
    (33) functions -> . declare_fun LCURLY statutes RCURLY endfunc functions
    (28) declare_fun -> . FUNCTION return_type addtype ID addfun LPAREN RPAREN
    (29) declare_fun -> . FUNCTION return_type addtype ID addfun LPAREN paramstatus params paramstatus RPAREN

    MAIN            shift and go to state 23
    FUNCTION        shift and go to state 15

    functions                      shift and go to state 22
    declare_fun                    shift and go to state 14

state 13

    (3) program_structure -> PROGRAM initiate ID addfun addprog SEMI changescope functions . MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc

    MAIN            shift and go to state 24


state 14

    (30) functions -> declare_fun . declare_var LCURLY statutes RCURLY endfunc
    (31) functions -> declare_fun . LCURLY statutes RCURLY endfunc
    (32) functions -> declare_fun . declare_var LCURLY statutes RCURLY endfunc functions
    (33) functions -> declare_fun . LCURLY statutes RCURLY endfunc functions
    (13) declare_var -> . VARS multitypes

    LCURLY          shift and go to state 26
    VARS            shift and go to state 11

    declare_var                    shift and go to state 25

state 15

    (28) declare_fun -> FUNCTION . return_type addtype ID addfun LPAREN RPAREN
    (29) declare_fun -> FUNCTION . return_type addtype ID addfun LPAREN paramstatus params paramstatus RPAREN
    (24) return_type -> . INT
    (25) return_type -> . FLOAT
    (26) return_type -> . CHAR
    (27) return_type -> . VOID

    INT             shift and go to state 28
    FLOAT           shift and go to state 29
    CHAR            shift and go to state 30
    VOID            shift and go to state 31

    return_type                    shift and go to state 27

state 16

    (4) program_structure -> PROGRAM initiate ID addfun addprog SEMI MAIN changeback . LPAREN RPAREN LCURLY statutes RCURLY endfunc

    LPAREN          shift and go to state 32


state 17

    (13) declare_var -> VARS multitypes .

    MAIN            reduce using rule 13 (declare_var -> VARS multitypes .)
    FUNCTION        reduce using rule 13 (declare_var -> VARS multitypes .)
    LCURLY          reduce using rule 13 (declare_var -> VARS multitypes .)


state 18

    (14) multitypes -> type . addtype COLON multivars SEMI
    (15) multitypes -> type . addtype COLON multivars SEMI multitypes
    (16) addtype -> .

    COLON           reduce using rule 16 (addtype -> .)

    addtype                        shift and go to state 33

state 19

    (10) type -> INT .

    COLON           reduce using rule 10 (type -> INT .)


state 20

    (11) type -> FLOAT .

    COLON           reduce using rule 11 (type -> FLOAT .)


state 21

    (12) type -> CHAR .

    COLON           reduce using rule 12 (type -> CHAR .)


state 22

    (1) program_structure -> PROGRAM initiate ID addfun addprog SEMI declare_var changescope functions . MAIN changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc

    MAIN            shift and go to state 34


state 23

    (2) program_structure -> PROGRAM initiate ID addfun addprog SEMI declare_var changescope MAIN . changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (9) changeback -> .

    LPAREN          reduce using rule 9 (changeback -> .)

    changeback                     shift and go to state 35

state 24

    (3) program_structure -> PROGRAM initiate ID addfun addprog SEMI changescope functions MAIN . changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (9) changeback -> .

    LPAREN          reduce using rule 9 (changeback -> .)

    changeback                     shift and go to state 36

state 25

    (30) functions -> declare_fun declare_var . LCURLY statutes RCURLY endfunc
    (32) functions -> declare_fun declare_var . LCURLY statutes RCURLY endfunc functions

    LCURLY          shift and go to state 37


state 26

    (31) functions -> declare_fun LCURLY . statutes RCURLY endfunc
    (33) functions -> declare_fun LCURLY . statutes RCURLY endfunc functions
    (38) statutes -> . assign
    (39) statutes -> . assign statutes
    (40) statutes -> . call_void
    (41) statutes -> . call_void statutes
    (42) statutes -> . returning
    (43) statutes -> . reading
    (44) statutes -> . reading statutes
    (45) statutes -> . writing
    (46) statutes -> . writing statutes
    (47) statutes -> . decision
    (48) statutes -> . decision statutes
    (49) statutes -> . conditional
    (50) statutes -> . conditional statutes
    (51) statutes -> . nonconditional
    (52) statutes -> . nonconditional statutes
    (53) assign -> . ID pushid EQUALS exprs assignment SEMI
    (54) assign -> . ID pushid LBRACK exprs RBRACK verif EQUALS exprs assignment SEMI
    (56) call_void -> . ID call exprp confirm SEMI
    (57) call_void -> . ID call LPAREN RPAREN confirm SEMI
    (58) call_void -> . special2 exprp sconfirm2 SEMI
    (62) returning -> . RETURN LPAREN exprs returnquad RPAREN SEMI
    (64) reading -> . READ LPAREN read_opt RPAREN SEMI
    (68) writing -> . WRITE LPAREN write_opt RPAREN SEMI
    (75) decision -> . IF LPAREN logic RPAREN ifquad THEN LCURLY statutes RCURLY filljump
    (76) decision -> . IF LPAREN logic RPAREN ifquad THEN LCURLY statutes RCURLY ELSE elsequad LCURLY statutes RCURLY filljump
    (80) conditional -> . WHILE loopquad LPAREN logic RPAREN whilequad DO LCURLY statutes RCURLY endquad
    (94) nonconditional -> . FOR exprs forquad1 EQUALS exprs forquad2 TO exprs forquad3 DO LCURLY statutes RCURLY forquad4
    (59) special2 -> . REGRESION
    (60) special2 -> . PLOT

    ID              shift and go to state 47
    RETURN          shift and go to state 49
    READ            shift and go to state 50
    WRITE           shift and go to state 51
    IF              shift and go to state 52
    WHILE           shift and go to state 53
    FOR             shift and go to state 54
    REGRESION       shift and go to state 55
    PLOT            shift and go to state 56

    statutes                       shift and go to state 38
    assign                         shift and go to state 39
    call_void                      shift and go to state 40
    returning                      shift and go to state 41
    reading                        shift and go to state 42
    writing                        shift and go to state 43
    decision                       shift and go to state 44
    conditional                    shift and go to state 45
    nonconditional                 shift and go to state 46
    special2                       shift and go to state 48

state 27

    (28) declare_fun -> FUNCTION return_type . addtype ID addfun LPAREN RPAREN
    (29) declare_fun -> FUNCTION return_type . addtype ID addfun LPAREN paramstatus params paramstatus RPAREN
    (16) addtype -> .

    ID              reduce using rule 16 (addtype -> .)

    addtype                        shift and go to state 57

state 28

    (24) return_type -> INT .

    ID              reduce using rule 24 (return_type -> INT .)


state 29

    (25) return_type -> FLOAT .

    ID              reduce using rule 25 (return_type -> FLOAT .)


state 30

    (26) return_type -> CHAR .

    ID              reduce using rule 26 (return_type -> CHAR .)


state 31

    (27) return_type -> VOID .

    ID              reduce using rule 27 (return_type -> VOID .)


state 32

    (4) program_structure -> PROGRAM initiate ID addfun addprog SEMI MAIN changeback LPAREN . RPAREN LCURLY statutes RCURLY endfunc

    RPAREN          shift and go to state 58


state 33

    (14) multitypes -> type addtype . COLON multivars SEMI
    (15) multitypes -> type addtype . COLON multivars SEMI multitypes

    COLON           shift and go to state 59


state 34

    (1) program_structure -> PROGRAM initiate ID addfun addprog SEMI declare_var changescope functions MAIN . changeback LPAREN RPAREN LCURLY statutes RCURLY endfunc
    (9) changeback -> .

    LPAREN          reduce using rule 9 (changeback -> .)

    changeback                     shift and go to state 60

state 35

    (2) program_structure -> PROGRAM initiate ID addfun addprog SEMI declare_var changescope MAIN changeback . LPAREN RPAREN LCURLY statutes RCURLY endfunc

    LPAREN          shift and go to state 61


state 36

    (3) program_structure -> PROGRAM initiate ID addfun addprog SEMI changescope functions MAIN changeback . LPAREN RPAREN LCURLY statutes RCURLY endfunc

    LPAREN          shift and go to state 62


state 37

    (30) functions -> declare_fun declare_var LCURLY . statutes RCURLY endfunc
    (32) functions -> declare_fun declare_var LCURLY . statutes RCURLY endfunc functions
    (38) statutes -> . assign
    (39) statutes -> . assign statutes
    (40) statutes -> . call_void
    (41) statutes -> . call_void statutes
    (42) statutes -> . returning
    (43) statutes -> . reading
    (44) statutes -> . reading statutes
    (45) statutes -> . writing
    (46) statutes -> . writing statutes
    (47) statutes -> . decision
    (48) statutes -> . decision statutes
    (49) statutes -> . conditional
    (50) statutes -> . conditional statutes
    (51) statutes -> . nonconditional
    (52) statutes -> . nonconditional statutes
    (53) assign -> . ID pushid EQUALS exprs assignment SEMI
    (54) assign -> . ID pushid LBRACK exprs RBRACK verif EQUALS exprs assignment SEMI
    (56) call_void -> . ID call exprp confirm SEMI
    (57) call_void -> . ID call LPAREN RPAREN confirm SEMI
    (58) call_void -> . special2 exprp sconfirm2 SEMI
    (62) returning -> . RETURN LPAREN exprs returnquad RPAREN SEMI
    (64) reading -> . READ LPAREN read_opt RPAREN SEMI
    (68) writing -> . WRITE LPAREN write_opt RPAREN SEMI
    (75) decision -> . IF LPAREN logic RPAREN ifquad THEN LCURLY statutes RCURLY filljump
    (76) decision -> . IF LPAREN logic RPAREN ifquad THEN LCURLY statutes RCURLY ELSE elsequad LCURLY statutes RCURLY filljump
    (80) conditional -> . WHILE loopquad LPAREN logic RPAREN whilequad DO LCURLY statutes RCURLY endquad
    (94) nonconditional -> . FOR exprs forquad1 EQUALS exprs forquad2 TO exprs forquad3 DO LCURLY statutes RCURLY forquad4
    (59) special2 -> . REGRESION
    (60) special2 -> . PLOT

    ID              shift and go to state 47
    RETURN          shift and go to state 49
    READ            shift and go to state 50
    WRITE           shift and go to state 51
    IF              shift and go to state 52
    WHILE           shift and go to state 53
    FOR             shift and go to state 54
    REGRESION       shift and go to state 55
    PLOT            shift and go to state 56

    statutes                       shift and go to state 63
    assign                         shift and go to state 39
    call_void                      shift and go to state 40
    returning                      shift and go to state 41
    reading                        shift and go to state 42
    writing                        shift and go to state 43
    decision                       shift and go to state 44
    conditional                    shift and go to state 45
    nonconditional                 shift and go to state 46
    special2                       shift and go to state 48

state 38

    (31) functions -> declare_fun LCURLY statutes . RCURLY endfunc
    (33) functions -> declare_fun LCURLY statutes . RCURLY endfunc functions

    RCURLY          shift and go to state 64


state 39

    (38) statutes -> assign .
    (39) statutes -> assign . statutes
    (38) statutes -> . assign
    (39) statutes -> . assign statutes
    (40) statutes -> . call_void
    (41) statutes -> . call_void statutes
    (42) statutes -> . returning
    (43) statutes -> . reading
    (44) statutes -> . reading statutes
    (45) statutes -> . writing
    (46) statutes -> . writing statutes
    (47) statutes -> . decision
    (48) statutes -> . decision statutes
    (49) statutes -> . conditional
    (50) statutes -> . conditional statutes
    (51) statutes -> . nonconditional
    (52) statutes -> . nonconditional statutes
    (53) assign -> . ID pushid EQUALS exprs assignment SEMI
    (54) assign -> . ID pushid LBRACK exprs RBRACK verif EQUALS exprs assignment SEMI
    (56) call_void -> . ID call exprp confirm SEMI
    (57) call_void -> . ID call LPAREN RPAREN confirm SEMI
    (58) call_void -> . special2 exprp sconfirm2 SEMI
    (62) returning -> . RETURN LPAREN exprs returnquad RPAREN SEMI
    (64) reading -> . READ LPAREN read_opt RPAREN SEMI
    (68) writing -> . WRITE LPAREN write_opt RPAREN SEMI
    (75) decision -> . IF LPAREN logic RPAREN ifquad THEN LCURLY statutes RCURLY filljump
    (76) decision -> . IF LPAREN logic RPAREN ifquad THEN LCURLY statutes RCURLY ELSE elsequad LCURLY statutes RCURLY filljump
    (80) conditional -> . WHILE loopquad LPAREN logic RPAREN whilequad DO LCURLY statutes RCURLY endquad
    (94) nonconditional -> . FOR exprs forquad1 EQUALS exprs forquad2 TO exprs forquad3 DO LCURLY statutes RCURLY forquad4
    (59) special2 -> . REGRESION
    (60) special2 -> . PLOT

    RCURLY          reduce using rule 38 (statutes -> assign .)
    ID              shift and go to state 47
    RETURN          shift and go to state 49
    READ            shift and go to state 50
    WRITE           shift and go to state 51
    IF              shift and go to state 52
    WHILE           shift and go to state 53
    FOR             shift and go to state 54
    REGRESION       shift and go to state 55
    PLOT            shift and go to state 56

    assign                         shift and go to state 39
    statutes                       shift and go to state 65
    call_void                      shift and go to state 40
    returning                      shift and go to state 41
    reading                        shift and go to state 42
    writing                        shift and go to state 43
    decision                       shift and go to state 44
    conditional                    shift and go to state 45
    nonconditional                 shift and go to state 46
    special2                       shift and go to state 48

state 40

    (40) statutes -> call_void .
    (41) statutes -> call_void . statutes
    (38) statutes -> . assign
    (39) statutes -> . assign statutes
    (40) statutes -> . call_void
    (41) statutes -> . call_void statutes
    (42) statutes -> . returning
    (43) statutes -> . reading
    (44) statutes -> . reading statutes
    (45) statutes -> . writing
    (46) statutes -> . writing statutes
    (47) statutes -> . decision
    (48) statutes -> . decision statutes
    (49) statutes -> . conditional
    (50) statutes -> . conditional statutes
    (51) statutes -> . nonconditional
    (52) statutes -> . nonconditional statutes
    (53) assign -> . ID pushid EQUALS exprs assignment SEMI
    (54) assign -> . ID pushid LBRACK exprs RBRACK verif EQUALS exprs assignment SEMI
